// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CreateWalletDialog - SecurityPassword renders correctly 1`] = `
Array [
  <div
    className="MuiDialogContent-root HookGlobalStyles-dialogContent-6"
  >
    <p
      className="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      common:security password description
    </p>
    <div
      id="PasswordInput"
      onChange={[Function]}
      placeholder="common:password"
      value=""
    />
    <div
      className="MuiBox-root MuiBox-root-7"
    >
      <div
        className="MuiBox-root MuiBox-root-8"
      >
        <div
          className="MuiBox-root MuiBox-root-9"
        />
        <div
          className="MuiBox-root MuiBox-root-10"
        />
        <div
          className="MuiBox-root MuiBox-root-11"
        />
        <p
          className="MuiTypography-root MuiTypography-body2"
          style={
            Object {
              "color": "#f44336",
              "margin": "0px 8px",
            }
          }
        >
          common:password security level 0
        </p>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        common:password caption
      </p>
    </div>
  </div>,
  <div
    className="MuiDialogActions-root MuiDialogActions-spacing"
  >
    <div
      className="MuiBox-root MuiBox-root-12"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-button-1 MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          common:next
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`component: CreateWalletDialog - SecurityPassword renders correctly with medium strength password 1`] = `
Array [
  <div
    className="MuiDialogContent-root HookGlobalStyles-dialogContent-6"
  >
    <p
      className="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      common:security password description
    </p>
    <div
      id="PasswordInput"
      onChange={[Function]}
      placeholder="common:password"
      value="123123qwe"
    />
    <div
      className="MuiBox-root MuiBox-root-25"
    >
      <div
        className="MuiBox-root MuiBox-root-26"
      >
        <div
          className="MuiBox-root MuiBox-root-27"
        />
        <div
          className="MuiBox-root MuiBox-root-28"
        />
        <div
          className="MuiBox-root MuiBox-root-29"
        />
        <p
          className="MuiTypography-root MuiTypography-body2"
          style={
            Object {
              "color": "#ff9800",
              "margin": "0px 8px",
            }
          }
        >
          common:password security level 1
        </p>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        common:password caption
      </p>
    </div>
  </div>,
  <div
    className="MuiDialogActions-root MuiDialogActions-spacing"
  >
    <div
      className="MuiBox-root MuiBox-root-30"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-button-1 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          common:next
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`component: CreateWalletDialog - SecurityPassword renders correctly with password less than 6 char 1`] = `
Array [
  <div
    className="MuiDialogContent-root HookGlobalStyles-dialogContent-6"
  >
    <p
      className="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      common:security password description
    </p>
    <div
      id="PasswordInput"
      onChange={[Function]}
      placeholder="common:password"
      value="123"
    />
    <div
      className="MuiBox-root MuiBox-root-13"
    >
      <div
        className="MuiBox-root MuiBox-root-14"
      >
        <div
          className="MuiBox-root MuiBox-root-15"
        />
        <div
          className="MuiBox-root MuiBox-root-16"
        />
        <div
          className="MuiBox-root MuiBox-root-17"
        />
        <p
          className="MuiTypography-root MuiTypography-body2"
          style={
            Object {
              "color": "#f44336",
              "margin": "0px 8px",
            }
          }
        >
          common:password security level 0
        </p>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        common:password caption
      </p>
    </div>
  </div>,
  <div
    className="MuiDialogActions-root MuiDialogActions-spacing"
  >
    <div
      className="MuiBox-root MuiBox-root-18"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-button-1 MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          common:next
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`component: CreateWalletDialog - SecurityPassword renders correctly with strong password 1`] = `
Array [
  <div
    className="MuiDialogContent-root HookGlobalStyles-dialogContent-6"
  >
    <p
      className="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      common:security password description
    </p>
    <div
      id="PasswordInput"
      onChange={[Function]}
      placeholder="common:password"
      value="123123qweQWE!@#"
    />
    <div
      className="MuiBox-root MuiBox-root-31"
    >
      <div
        className="MuiBox-root MuiBox-root-32"
      >
        <div
          className="MuiBox-root MuiBox-root-33"
        />
        <div
          className="MuiBox-root MuiBox-root-34"
        />
        <div
          className="MuiBox-root MuiBox-root-35"
        />
        <p
          className="MuiTypography-root MuiTypography-body2"
          style={
            Object {
              "color": "#4caf50",
              "margin": "0px 8px",
            }
          }
        >
          common:password security level 2
        </p>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        common:password caption
      </p>
    </div>
  </div>,
  <div
    className="MuiDialogActions-root MuiDialogActions-spacing"
  >
    <div
      className="MuiBox-root MuiBox-root-36"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-button-1 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          common:next
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`component: CreateWalletDialog - SecurityPassword renders correctly with weak password 1`] = `
Array [
  <div
    className="MuiDialogContent-root HookGlobalStyles-dialogContent-6"
  >
    <p
      className="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      common:security password description
    </p>
    <div
      id="PasswordInput"
      onChange={[Function]}
      placeholder="common:password"
      value="123456"
    />
    <div
      className="MuiBox-root MuiBox-root-19"
    >
      <div
        className="MuiBox-root MuiBox-root-20"
      >
        <div
          className="MuiBox-root MuiBox-root-21"
        />
        <div
          className="MuiBox-root MuiBox-root-22"
        />
        <div
          className="MuiBox-root MuiBox-root-23"
        />
        <p
          className="MuiTypography-root MuiTypography-body2"
          style={
            Object {
              "color": "#f44336",
              "margin": "0px 8px",
            }
          }
        >
          common:password security level 0
        </p>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        common:password caption
      </p>
    </div>
  </div>,
  <div
    className="MuiDialogActions-root MuiDialogActions-spacing"
  >
    <div
      className="MuiBox-root MuiBox-root-24"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-button-1 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          common:next
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>,
]
`;
